--- a/backend/src/main/resources/application.yaml
+++ b/backend/src/main/resources/application.yaml
@@ -22,4 +22,6 @@ spring:
 webhook:
   url: https://backend.localhost/api
 bot:
-  token: 6501382603:AAGYDgjoV718Z_1p7PSViCRI8H4zW7RnyB0
+  token: 7543101157:AAESvq4Mu3IHx-2gtkj4xJwktoohT9RbWqE
+dev:
+  mode: true
