--- a/tg_bot/docker-compose.yaml
+++ b/tg_bot/docker-compose.yaml
@@ -1,13 +1,13 @@
 services:
   postgres:
     image: postgres:16-alpine
-    container_name: users_db
+    container_name: goods_db
     environment:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
-      POSTGRES_DB: users_db
+      POSTGRES_DB: goods_db
     volumes:
       - ./postgres_data:/var/lib/postgresql/data
-      - ./init.sql:/docker-entrypoint-initdb.d/init.sql
+      #- ./init.sql:/docker-entrypoint-initdb.d/init.sql
     ports:
       - "5432:5432"
