--- a/backend/src/main/resources/application.yaml
+++ b/backend/src/main/resources/application.yaml
@@ -25,8 +25,8 @@ spring:
     - "/swagger-ui/index.html"
   datasource:
     driver-class-name: org.postgresql.Driver
-    url: jdbc:postgresql://localhost:5432/users_db
-    #url: jdbc:postgresql://auth_db/auth_db
+    url: jdbc:postgresql://localhost:5432/goods_db
+    #url: jdbc:postgresql://goods_db/goods_db
     username: postgres
     password: postgres
   security:
