--- a/tg_bot/docker-compose.yaml
+++ b/tg_bot/docker-compose.yaml
@@ -8,6 +8,19 @@ services:
       POSTGRES_DB: goods_db
     volumes:
       - ./postgres_data:/var/lib/postgresql/data
-      #- ./init.sql:/docker-entrypoint-initdb.d/init.sql
     ports:
       - "5432:5432"
+  minio:
+    image: minio/minio
+    entrypoint: sh
+    command: >
+      -c 'mkdir -p /data/goods_bucket 
+      && minio server /data'
+    ports:
+      - 9000:9000
+      - 9001:9001
+    environment:
+      MINIO_ROOT_USER: 'minioadmin'
+      MINIO_ROOT_PASSWORD: 'minioadmin'
+      MINIO_ADDRESS: ':9000'
+      MINIO_CONSOLE_ADDRESS: ':9001'
