--- a/tg_bot/docker-compose.yaml
+++ b/tg_bot/docker-compose.yaml
@@ -9,7 +9,83 @@ services:
     volumes:
       - ./postgres_data:/var/lib/postgresql/data
     ports:
-      - '5432:5432'
+      - "5432:5432"
+    networks:
+      - odfe-net
+
+  odfe-node:
+    image: elasticsearch:8.17.1
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "1000m"
+        max-file: "10"
+    container_name: odfe-node
+    environment:
+      - discovery.type=single-node  # Для single-node режима
+      - node.name=odfe-node
+      - bootstrap.memory_lock=true
+      - xpack.security.enabled=true
+      - ELASTIC_PASSWORD=elastic_password  # Пароль должен совпадать с Logstash
+      - "ES_JAVA_OPTS=-Xms4096m -Xmx4096m"
+    ulimits:
+      memlock:
+        soft: -1
+        hard: -1
+      nofile:
+        soft: 65536
+        hard: 65536
+    volumes:
+      - elasticsearch_data:/usr/share/elasticsearch/data
+    ports:
+      - "9200:9200"
+      - "9600:9600"
+    networks:
+      - odfe-net
+  kibana:
+    image: kibana:8.17.1
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "100m"
+        max-file: "3"
+    container_name: odfe-kibana
+    ports:
+      - "5601:5601"
+    expose:
+      - "5601"
+    environment:
+      ELASTICSEARCH_URL: http://odfe-node:9200
+      ELASTICSEARCH_HOSTS: http://odfe-node:9200
+      ELASTICSEARCH_USERNAME: kibana_system
+      ELASTICSEARCH_PASSWORD: kibana_password
+    networks:
+      - odfe-net
+  logstash:
+    user: root
+    image: docker.elastic.co/logstash/logstash-oss:7.9.1
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "100m"
+        max-file: "3"
+    ports:
+      - "5044:5044"
+    depends_on:
+      - postgres
+      - odfe-node
+    environment:
+      - PIPELINE_WORKERS=1
+      - PIPELINE_BATCH_SIZE=125
+      - PIPELINE_BATCH_DELAY=50
+      - ELASTICSEARCH_USERNAME=elastic
+      - ELASTICSEARCH_PASSWORD=elastic_password
+    volumes:
+      - ./conf/logstash.conf:/usr/share/logstash/pipeline/logstash.conf
+      - logstash_data:/usr/share/logstash/data
+      - ./conf/postgresql-42.6.0.jar:/usr/share/logstash/postgresql-42.6.0.jar
+    networks:
+      - odfe-net
   minio:
     image: minio/minio
     entrypoint: sh
@@ -24,3 +100,12 @@ services:
       MINIO_ROOT_PASSWORD: 'minioadmin'
       MINIO_ADDRESS: ':9000'
       MINIO_CONSOLE_ADDRESS: ':9001'
+
+
+networks:
+  odfe-net:
+
+volumes:
+  postgres_data:
+  elasticsearch_data:
+  logstash_data:
