front add search page + product page + app sceleton

--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -1,7 +1,22 @@
 {
-  "files": [],
-  "references": [
-    { "path": "./tsconfig.app.json" },
-    { "path": "./tsconfig.node.json" }
-  ]
+	"files": [],
+	"references": [
+		{ "path": "./tsconfig.app.json" },
+		{ "path": "./tsconfig.node.json" }
+	],
+	"compilerOptions": {
+		"paths": {
+			"@styles/*": ["./src/styles/*"]
+		}
+	}
 }
+// "compilerOptions": {
+//     "jsx": "react-jsx",
+//     "lib": ["dom", "dom.iterable", "esnext"],
+//     "paths": {
+//       "@/*": ["./src/*"],
+//       "@styles/*": ["./src/styles/*"]
+//     },
+//     "types": ["@types/react", "@types/react-dom"]
+//   },
+//   "include": ["src"]
