--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,13 +10,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@tailwindcss/vite": "^4.0.12",
+    "@ant-design/icons": "^6.0.0",
+    "@ant-design/react-slick": "^1.1.2",
     "@tanstack/react-query": "^5.71.5",
     "@tanstack/react-query-devtools": "^5.71.5",
     "@telegram-apps/sdk-react": "^3.1.2",
+    "antd": "^5.24.6",
     "axios": "^1.8.2",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-router-dom": "^6.22.3",
+    "react-slick": "^0.30.3",
+    "sass": "^1.86.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
@@ -24,13 +29,10 @@
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
     "@vitejs/plugin-react-swc": "^3.8.0",
-    "autoprefixer": "^10.4.20",
     "eslint": "^9.21.0",
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^15.15.0",
-    "postcss": "^8.5.3",
-    "tailwindcss": "^4.0.12",
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.24.1",
     "vite": "^6.2.0"
