--- a/backend/src/main/resources/application.yaml
+++ b/backend/src/main/resources/application.yaml
@@ -41,7 +41,7 @@ spring:
   application:
     name: backend
   public-urls:
-    - "/api/**" # для тестирования
+    - "/api/products/**"
     - "/v3/api-docs.yaml"
     - "/v3/api-docs/**"
     - "/swagger-ui/**"
@@ -73,7 +73,7 @@ spring:
       refresh-expiration: 604800
   jpa:
     hibernate:
-      ddl-auto: create
+      ddl-auto: none
     show-sql: false
     properties:
       hibernate:
