--- a/tg_bot/.env
+++ b/tg_bot/.env
@@ -6,8 +6,8 @@ DB_HOST = localhost
 DB_PORT = 5432
 DB_USER = postgres
 DB_PASS = postgres
-DB_NAME = users_db
-DB_HOST_DOCKER = users_db
+DB_NAME = goods_db
+DB_HOST_DOCKER = goods_db
 
 WEBAPP_URL = https://frontend.localhost/
 
