--- a/tg_bot/.env
+++ b/tg_bot/.env
@@ -9,5 +9,5 @@ DB_PASS = postgres
 DB_NAME = goods_db
 DB_HOST_DOCKER = goods_db
 
-WEBAPP_URL = https://frontend.localhost/
+WEBAPP_URL = https://ssushop.ru
 
