--- a/tg_bot/Dockerfile
+++ b/tg_bot/Dockerfile
@@ -1,4 +1,9 @@
-FROM ubuntu:latest
-LABEL authors="user"
+FROM python:3.11-slim
 
-ENTRYPOINT ["top", "-b"]
+WORKDIR /app
+COPY requirements.txt .
+RUN pip install --no-cache-dir -r requirements.txt
+
+COPY . .
+
+CMD ["python", "main.py"]
