--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -17,11 +17,13 @@ services:
   # MinIO
   minio:
     image: minio/minio
-    command: server /data --console-address ":9001"
+    command: server --certs-dir /certs /data --console-address ":9001" 
     environment:
       MINIO_ROOT_USER: minioadmin
       MINIO_ROOT_PASSWORD: minioadmin
+      MINIO_SERVER_URL: "https://www.ssushop.ru:9000" 
     volumes:
+      - ~/minio/certs:/certs
       - minio_data:/data
     ports:
       - '9000:9000'
