--- a/nginx/conf.d/ssushop.conf
+++ b/nginx/conf.d/ssushop.conf
@@ -58,12 +58,16 @@ server {
     }
 
     location /minio/ {
-        proxy_pass http://minio:9001;
-        proxy_set_header Host $host;
-    }
+            proxy_pass http://minio:9000/;
+            proxy_set_header Host $host;
+            client_max_body_size 50M;
+        }
 
-    location /api/minio/ {
-        proxy_pass http://minio:9000;
-        proxy_set_header Host $host;
-    }
+   location /minio-console/ {
+            proxy_pass http://minio:9001/;
+            proxy_set_header Host $host;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "upgrade";
+        }
 }
