--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -28,6 +28,9 @@ services:
     ports:
       - '9000:9000'
       - '9001:9001'
+    expose:
+      - '9000'
+      - '9001'
     networks:
       - app-network
   frontend:
