--- a/nginx/conf.d/ssushop.conf
+++ b/nginx/conf.d/ssushop.conf
@@ -18,6 +18,24 @@ server {
     proxy_buffers 4 256k;
     proxy_busy_buffers_size 256k;
 
+    location /minio/ {
+            proxy_pass http://minio:9000/;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            client_max_body_size 50M;
+        }
+
+    location /minio-console/ {
+            proxy_pass http://minio:9001/;
+            proxy_set_header Host $host;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "upgrade";
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
+
     location / {
         proxy_pass http://frontend:80;
         proxy_set_header Host $host;
@@ -56,18 +74,4 @@ server {
             return 204;
         }
     }
-
-    location /minio/ {
-            proxy_pass http://minio:9000/;
-            proxy_set_header Host $host;
-            client_max_body_size 50M;
-        }
-
-   location /minio-console/ {
-            proxy_pass http://minio:9001/;
-            proxy_set_header Host $host;
-            proxy_http_version 1.1;
-            proxy_set_header Upgrade $http_upgrade;
-            proxy_set_header Connection "upgrade";
-        }
 }
