--- a/nginx/conf.d/ssushop.conf
+++ b/nginx/conf.d/ssushop.conf
@@ -19,8 +19,9 @@ server {
     proxy_busy_buffers_size 256k;
 
     location /minio/ {
-            proxy_pass http://minio:9000/;
+            proxy_pass https://minio:9000/;
             proxy_set_header Host $host;
+            proxy_ssl_verify off;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
@@ -28,8 +29,9 @@ server {
         }
 
     location /minio-console/ {
-            proxy_pass http://minio:9001/;
+            proxy_pass https://minio:9001/;
             proxy_set_header Host $host;
+            proxy_ssl_verify off;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection "upgrade";
