--- a/backend/src/main/resources/application.yaml
+++ b/backend/src/main/resources/application.yaml
@@ -2,11 +2,11 @@ server:
   port: 8080
 
 s3:
-  accessKeyId: E59DuR6wUMZKqZytoLRs
-  secretAccessKey: FPsYRYvw1063DbV7y8tDxbloaMM4S3oUfp133253
-  minioUrl: https://www.ssushop.ru/minio
-  region: us-east-1
-  bucket: goods
+  accessKeyId: KM2S7GR01BUER3FKDN0U
+  secretAccessKey: MXG3weJGL25Uk3RLkktsZNt1AXwG7pI6tiq7FMnR
+  minioUrl: https://s3.twcstorage.ru
+  region: ru-1
+  bucket: 242358d3-goods-bucket
 logging:
   level:
     org.springdoc: DEBUG
