--- a/nginx/conf.d/ssushop.conf
+++ b/nginx/conf.d/ssushop.conf
@@ -18,25 +18,25 @@ server {
     proxy_buffers 4 256k;
     proxy_busy_buffers_size 256k;
 
-    location /minio/ {
-            proxy_pass https://minio:9000/;
-            proxy_set_header Host $host;
-            proxy_ssl_verify off;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-            client_max_body_size 50M;
-        }
+    # location /minio/ {
+    #         proxy_pass https://minio:9000/;
+    #         proxy_set_header Host $host;
+    #         proxy_ssl_verify off;
+    #         proxy_set_header X-Real-IP $remote_addr;
+    #         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    #         proxy_set_header X-Forwarded-Proto $scheme;
+    #         client_max_body_size 50M;
+    #     }
 
-    location /minio-console/ {
-            proxy_pass https://minio:9001/;
-            proxy_set_header Host $host;
-            proxy_ssl_verify off;
-            proxy_http_version 1.1;
-            proxy_set_header Upgrade $http_upgrade;
-            proxy_set_header Connection "upgrade";
-            proxy_set_header X-Forwarded-Proto $scheme;
-        }
+    # location /minio-console/ {
+    #         proxy_pass https://minio:9001/;
+    #         proxy_set_header Host $host;
+    #         proxy_ssl_verify off;
+    #         proxy_http_version 1.1;
+    #         proxy_set_header Upgrade $http_upgrade;
+    #         proxy_set_header Connection "upgrade";
+    #         proxy_set_header X-Forwarded-Proto $scheme;
+    #     }
 
     location / {
         proxy_pass http://frontend:80;
