--- a/conf/logstash.conf
+++ b/conf/logstash.conf
@@ -47,7 +47,7 @@ filter {
     rename => { "category_name" => "category" }
     rename => { "number_of_orders" => "numberOfOrders" }
     rename => { "total_reviews" => "totalReviews" }
-
+    rename => { "category_id" => "categoryId" }
     # Convert JSON strings to actual JSON objects
     gsub => [
       "photos", "^\"", "",
@@ -86,6 +86,11 @@ output {
     password => "elastic_password"
     index => "products"
     document_id => "%{id}"
+
+    manage_template     => true          
+    template            => "/usr/share/logstash/templates/products_template.json"
+    template_name       => "products_template"
+    template_overwrite  => true 
   }
   stdout {
     codec => "json_lines"
