fix bugs dev version

--- a/tg_bot/.env
+++ b/tg_bot/.env
@@ -9,5 +9,6 @@ DB_PASS = postgres
 DB_NAME = goods_db
 DB_HOST_DOCKER = goods_db
 
-WEBAPP_URL = https://www.ssushop.ru
+WEBAPP_URL = https://frontend.localhost
+#https://www.ssushop.ru
 
