--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -71,28 +71,28 @@ services:
     networks:
       - app-network
 
-  # Backend
-  backend:
-    build:
-      context: ./backend
-      dockerfile: Dockerfile
-    restart: unless-stopped
-    depends_on:
-      postgres:
-        condition: service_healthy
-      elasticsearch:
-        condition: service_healthy
-    environment:
-      SPRING_DATASOURCE_URL: jdbc:postgresql://goods_db:5432/goods_db
-      SPRING_DATASOURCE_USERNAME: postgres
-      SPRING_DATASOURCE_PASSWORD: postgres
-      SPRING_ELASTICSEARCH_URIS: http://elasticsearch:9200
-      SPRING_ELASTICSEARCH_USERNAME: elastic
-      SPRING_ELASTICSEARCH_PASSWORD: elastic_password
-    ports:
-      - '8080:8080'
-    networks:
-      - app-network
+  # # Backend
+  # backend:
+  #   build:
+  #     context: ./backend
+  #     dockerfile: Dockerfile
+  #   restart: unless-stopped
+  #   depends_on:
+  #     postgres:
+  #       condition: service_healthy
+  #     elasticsearch:
+  #       condition: service_healthy
+  #   environment:
+  #     SPRING_DATASOURCE_URL: jdbc:postgresql://goods_db:5432/goods_db
+  #     SPRING_DATASOURCE_USERNAME: postgres
+  #     SPRING_DATASOURCE_PASSWORD: postgres
+  #     SPRING_ELASTICSEARCH_URIS: http://elasticsearch:9200
+  #     SPRING_ELASTICSEARCH_USERNAME: elastic
+  #     SPRING_ELASTICSEARCH_PASSWORD: elastic_password
+  #   ports:
+  #     - '8080:8080'
+  #   networks:
+  #     - app-network
 
   # # Kibana
   # kibana:
@@ -110,18 +110,18 @@ services:
   #   networks:
   #     - app-network
 
-  #Telegram Bot
-  # telegram-bot:
-  #   build:
-  #     context: ./tg_bot
-  #     dockerfile: Dockerfile
-  #   depends_on:
-  #     - backend
-  #     - postgres
-  #   environment:
-  #     DB_URL: postgresql://postgres:postgres@postgres:5432/goods_db
-  #   networks:
-  #     - app-network
+  # Telegram Bot
+  telegram-bot:
+    build:
+      context: ./tg_bot
+      dockerfile: Dockerfile
+    depends_on:
+      #- backend
+      - postgres
+    environment:
+      DB_URL: postgresql://postgres:postgres@postgres:5432/goods_db
+    networks:
+      - app-network
 
   # Frontend
   # frontend:
