--- a/admin_panel/package.json
+++ b/admin_panel/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ant-design/graphs": "^2.0.5",
     "@ant-design/icons": "^6.0.0",
     "@ant-design/plots": "^2.3.3",
     "@tanstack/react-query": "^5.75.1",
