--- a/admin_panel/package.json
+++ b/admin_panel/package.json
@@ -12,7 +12,6 @@
   "dependencies": {
     "@ant-design/graphs": "^2.0.5",
     "@ant-design/icons": "^6.0.0",
-    "@ant-design/plots": "^2.3.3",
     "@tanstack/react-query": "^5.75.1",
     "@tanstack/react-query-devtools": "^5.75.1",
     "@types/react-router-dom": "^5.3.3",
@@ -22,7 +21,8 @@
     "moment": "^2.30.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-router-dom": "^7.5.3"
+    "react-router-dom": "^7.5.3",
+    "recharts": "^2.15.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
