--- a/backend/src/main/resources/application.yaml
+++ b/backend/src/main/resources/application.yaml
@@ -26,6 +26,10 @@ springdoc:
     disabled: true
 
 spring:
+  flyway:
+    enabled: true
+    baseline-on-migrate: true
+    locations: classpath:db/migration
   mvc:
     pathmatch:
       matching-strategy: ant_path_matcher
@@ -79,7 +83,7 @@ spring:
         FAIL_ON_UNKNOWN_PROPERTIES: false
   jpa:
     hibernate:
-      ddl-auto: create-drop
+      ddl-auto: validate
     show-sql: false
     properties:
       hibernate:
