--- a/nginx/conf.d/ssushop.conf
+++ b/nginx/conf.d/ssushop.conf
@@ -1,42 +1,22 @@
 server {
     listen 80;
-    server_name www.ssushop.ru ssushop.ru;
+    server_name www.ssushop.online ssushop.online;
     client_max_body_size 100M;
     return 301 https://$host$request_uri;
 }
 
 server {
     listen 443 ssl http2;
-    server_name www.ssushop.ru ssushop.ru;
+    server_name www.ssushop.online ssushop.online;
 
-    ssl_certificate /etc/letsencrypt/live/www.ssushop.ru/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/www.ssushop.ru/privkey.pem;
+    ssl_certificate /etc/letsencrypt/live/www.ssushop.online/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/www.ssushop.online/privkey.pem;
 
     proxy_http_version 1.1;
     proxy_set_header Connection "";
     proxy_buffer_size 128k;
     proxy_buffers 4 256k;
     proxy_busy_buffers_size 256k;
-
-    # location /minio/ {
-    #         proxy_pass https://minio:9000/;
-    #         proxy_set_header Host $host;
-    #         proxy_ssl_verify off;
-    #         proxy_set_header X-Real-IP $remote_addr;
-    #         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    #         proxy_set_header X-Forwarded-Proto $scheme;
-    #         client_max_body_size 50M;
-    #     }
-
-    # location /minio-console/ {
-    #         proxy_pass https://minio:9001/;
-    #         proxy_set_header Host $host;
-    #         proxy_ssl_verify off;
-    #         proxy_http_version 1.1;
-    #         proxy_set_header Upgrade $http_upgrade;
-    #         proxy_set_header Connection "upgrade";
-    #         proxy_set_header X-Forwarded-Proto $scheme;
-    #     }
 
     location / {
         proxy_pass http://frontend:80;
@@ -77,3 +57,4 @@ server {
         }
     }
 }
+
