--- a/nginx/conf.d/ssushop.conf
+++ b/nginx/conf.d/ssushop.conf
@@ -9,8 +9,8 @@ server {
     listen 443 ssl http2;
     server_name www.ssushop.online ssushop.online;
 
-    ssl_certificate /etc/letsencrypt/live/www.ssushop.online/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/www.ssushop.online/privkey.pem;
+    ssl_certificate /etc/letsencrypt/live/ssushop.online/fullchain.pem;
+    ssl_certificate_key  /etc/letsencrypt/live/ssushop.online/privkey.pem;
 
     proxy_http_version 1.1;
     proxy_set_header Connection "";
